# MedicAI_backend

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
archive/: settings.py
docker/backend/: Dockerfile
ideas/: automatic_class_import_instantiate.py
src/: main.py  settings.py
src/alembic/: env.py
src/alembic/versions/: 29dfc0d4d48b_adjusting_chats_with_user_id.py  2b846579fb03_updating_medic_document_from_unique_to_.py  3029184e8c5e_reviewing.py  415869681065_adjusting_chats_with_user_id.py  4d0899942308_adding_size_to_message_field.py  a726e3c440cd_changing_foreign_key_chat_id_from_chats_.py  d7663c40ef34_adicionando_campo_photo_object_a_tabela_.py
src/api/: __init__.py  chats.py  flowise.py  users.py
src/app/: __init__.py  chats.py  users.py
src/base/: __init__.py
src/common/: __init__.py  auth.py  aws.py  base_users.py  class_exceptions.py  generic.py
src/db/: connectors.py  models.py  schemas.py
src/domain/: chats.py
src/schemas/: __init__.py  chats.py  users.py
src/utils/: __init__.py  enums.py  mixins.py
